# RsGame

./: .gitignore  .pre-commit-config.yaml  BunnyGarden.gbc  BunnyGarden_build_rom.py  BunnyQuest.gbc  CONTRIBUTING.md  Claude.md  DEVELOPMENT.md  GRAPHICS_PREVIEW.md  HOW_TO_ADD_CONTENT.md  Makefile  PHASE4_BUGFIXES.md  README.md  ROADMAP.md  WORKFLOW.md  aesthetics.py  asm_game.py  build_rom.py  gbc_lib.py  graphics_utils.py  maze_generator.py  maze_preview.py  memory.md  music.py  music_preview.py  narrative.py  path_preview.py  pathfinding.py  pyproject.toml  requirements.txt  road_generator.py  road_preview.py  screen_preview.py  sound.py  test_graphics_preview.py  test_maze_generator.py  test_pathfinding.py  test_results.txt  test_road_generator.py  test_rom.py  (+7 more)
.claude/skills/: README.md
.github/workflows/: build.yml  lint.yml  test.yml
assets/: README.md  aesthetics.json  narrative.json  sounds.json
docs/: INDEX.md
docs/architecture/: 00-vision.md  01-concept-of-play.md  02-system-context.md  03-architecture.md  04-domain-model.md  05-functional-requirements.md  06-non-functional-requirements.md  07-data-model.md  08-presentation-architecture.md  09-interface-specification.md  10-requirements-traceability-matrix.md  ADS-001-streaming-infinite-world-generation.md  ADS-002-infinite-mode-combat-sub-mode.md  INDEX.md  strategic-assumptions-register.md
docs/feature-planning/: 01-release-plan.md  02-epic-catalog.md  03-feature-catalog.md  04-feature-dependency-graph.md  05-feature-review.md  INDEX.md
docs/features/: FS-101-per-zone-scoreitem-persistence.md  FS-102-procedural-world-generation.md  FS-103-generated-region-screen-composition.md  FS-104-main-menu-new-game-flow.md  FS-105-generated-world-save-persistence.md  FS-106-aesthetic-biome-transition-compliance.md  FS-107-maze-shaped-region-adjacency.md  FS-108-maze-aware-transition-edge-signaling.md  FS-109-select-menu-edge-indicator-legend-screen.md  FS-110-infinite-mode.md  FS-111-procedural-music-generation.md  FS-112-infinite-mode-combat-sub-mode.md  INDEX.md
docs/implementation/: 00-master-build-plan.md  01-technical-work-breakdown.md
docs/master/: INDEX.md  MSTR-001-program-vision.md
docs/pipeline/: BOOTSTRAP.md  PLAN-requirements-aesthetics-story-map.md  backlog-archive.md  backlog.md  pipeline-journal-archive.md  pipeline-journal.md
docs/requirements/: 01-functional-requirements.md  02-non-functional-requirements.md  03-requirements-review.md  04-requirements-traceability-matrix.md  INDEX.md
docs/research/: INDEX.md
docs/reviews/: INDEX.md  content-review-IP-1031.md  content-review-ip-1081-ip-1082.md  content-review-ip-1125-combat-sprites.md  content-review-nine-biome-family-delta.md  integration-review-bootstrap-tranche.md  integration-review-infinite-mode-combat-sub-mode-tranche.md  integration-review-infinite-mode-tranche.md  integration-review-ip-1021.md  integration-review-ip-1081-ip-1082.md  integration-review-ip-9110-9120-9130-9140.md  integration-review-maze-shaped-adjacency-tranche.md  integration-review-movement-pickup-ui-tranche.md  (+7 more)
legacy/: BunnyGarden_logic.json  README.md
src/: __init__.py
tests/: __init__.py  conftest.py
(+163 files in other folders)
